# quorum

./: .env.example  .gitignore  Makefile  README.md  deploy.sh  docker-compose.yml
ai-layer/: aggregator.py  cli.py  config_loader.py  http_server.py  judge.py  pipeline.py  requirements.txt  server.py  trace.py
ai-layer/agents/: base.py  cryptobert.py  finbert.py  flow.py  news.py  sentiment.py  technical.py  trend_ml.py
ai-layer/learning/: __init__.py  brain.py  edge.py  journal.py  settle.py
ai-layer/providers/: bitkub.py  news_provider.py  web_cache.py  websearch.py
ai-layer/strategy/: __init__.py  entry_discipline.py  market_quality.py  trend_gate.py
ai-layer/tests/: test_aggregator.py  test_brain.py  test_edge.py  test_entry_discipline.py  test_flow.py  test_judge_planner.py  test_market_quality.py  test_model_rotation.py  test_sentiment.py  test_settle.py  test_trend_gate.py  test_web_cache.py
backend/: Cargo.toml
backend/src/: config.rs  main.rs
backend/src/application/: governor.rs  mod.rs  preflight.rs  risk.rs  trading.rs  watch.rs
backend/src/domain/: mod.rs  models.rs  ports.rs
backend/src/infrastructure/: ai_sidecar.rs  auth.rs  binance.rs  bitkub.rs  broker_resolver.rs  events.rs  market.rs  mod.rs  postgres.rs  postgres_trading.rs  qpack.rs  scanner.rs
backend/src/presentation/: handlers.rs  middleware.rs  mod.rs  state.rs  ws.rs
config/: quorum.toml
design/: Home.md
docs/: ARCHITECTURE.md  BUILD.md  FEATURES.md  OLLAMA.md  RUN.md  STRATEGY.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+57 files in other folders)
