[package]
name = "quorum"
version = "0.1.0"
edition = "2021"
description = "Quorum — multi-agent consensus trading bot (web backend, clean architecture)"

[[bin]]
name = "quorum"
path = "src/main.rs"

[dependencies]
# async runtime + web
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# database
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "json",
  "macros",
  "migrate",
] }

# http client (AI sidecar + bitkub)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# crypto สำหรับ Bitkub HMAC signing (ใช้ตอนเปิด private API)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# misc
async-trait = "0.1"
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"
jsonwebtoken = "9"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
